force-app/main/default/objects/ARF_Account_Payment_Method__c/ARF_Account_Payment_Method__c.object-meta.xml
<CustomObject>
    <description>Junction linking payment methods to accounts — supports multi-account payment methods</description>
    <label>Account Payment Method</label>
    <nameField>
        <displayFormat>APM-{0000}</displayFormat>
        <label>Account Payment Method Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>