force-app/main/default/objects/ARF_Account_Payment_Method__c/fields/Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Added_Date__c</fullName>
    <description>Date this payment method was linked to the account</description>
    <label>Added Date</label>
    <type>Date</type>
</CustomField>