force-app/main/default/objects/ARF_Account_Payment_Method__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this is the primary payment method for this account</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>