force-app/main/default/objects/ARF_Account_Payment_Method__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Payment method record</description>
    <label>Payment Method</label>
    <referenceTo>ARF_Payment_Method__c</referenceTo>
    <relationshipLabel>Account Links</relationshipLabel>
    <relationshipName>Account_Payment_Methods</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>